--- a/settings.json
+++ b/settings.json
@@ -3,14 +3,14 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"Kurz Bot Assistan", 
-"ownerNumber": "6281220670449@s.whatsapp.net",
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"Lord KURRXDゑ", 
-"Dana":"081220670449", 
-"Pulsa":"081220670449", 
-"Gopay":"082298891772", 
+"NamaBot":"I R F A N B O T", 
+"ownerNumber": "6289510497533@s.whatsapp.net",
+"NomorOwner":"6289510497533", 
+"NomorOwner2":"+62 895-1049-7533", 
+"NamaOwner":"IRFANFF9", 
+"Dana":"089510497533", 
+"Pulsa":"089510497533", 
+"Gopay":"089510497533", 
 "lolkey":"LOLKONTOL09",
 "gcount": 20
 }
